# django-ecomprj

./: .gitignore  README.md  pyproject.toml  requirements.txt
ecommerce/accounts/: urls.py  views.py
ecommerce/core/: admin.py  forms.py  models.py  urls.py  views.py
ecommerce/core/migrations/: 0001_initial.py
ecommerce/core/templates/core/: base.html  index.html  product_page.html  sepet.html  urun_ayrinti.html
ecommerce/core/templatetags/: sepet_template_tag.py
ecommerce/ecommerce/: settings.py  urls.py
ecommerce/static/css/: register.css
ecommerce/static/img/products/: products
ecommerce/templates/accounts/: kayit.html  oturum.html
ecommerce/templates/core/: about.html  admin_comment_reply.html  admin_comments.html  admin_order_detail.html  admin_orders.html  admin_page.html  contact.html  gizlilik_politikasi.html  hizmet.html  index.html  layout.html  mesaj.html  odeme_kontrol.html  odeme_tamam.html  payment_cancelled.html  payment_successful.html  product_page.html  sepet.html  siparis_detay.html  siparis_listesi.html  siparislerim.html  subscribe.html  urun_ayrinti.html  urun_ekle.html  urun_guncelle.html
